--- a/smolvlm.html
+++ b/smolvlm.html
@@ -101,7 +101,7 @@ document.getElementById('runBtn').addEventListener('click', async () => {
     const pixelValues = imageDataToTensor(imageData);
 
     // Dummy input_ids for demo
-    const inputIds = new BigInt64Array([0]);
+    const inputIds = new BigInt64Array([0n]); // note the 'n' at the end
 
     const feeds = {
         pixel_values: new ort.Tensor('float32', pixelValues, [1,3,160,160]),
