--- a/smolvlm.html
+++ b/smolvlm.html
@@ -15,34 +15,30 @@
 
 <h1>SmolVLM WebGPU Demo</h1>
 
-<label>Upload ONNX model:</label>
-<input type="file" id="onnxUpload" accept=".onnx"><br>
-
-<label>Upload image:</label>
 <input type="file" id="imageUpload" accept="image/*"><br>
-
 <input type="text" id="prompt" placeholder="Enter your prompt" value="extract the text from image accurately"><br>
-
 <button id="runBtn">Run Model</button>
 
 <img id="preview" src="" alt="Uploaded image preview">
-<pre id="output"></pre>
+<pre id="output">Loading models...</pre>
 
 <script>
-let session = null;
-let modelLoaded = false;
+let embedSession = null;
+let decoderSession = null;
 
-// Handle ONNX model upload
-document.getElementById('onnxUpload').addEventListener('change', async (evt) => {
-    const file = evt.target.files[0];
-    if (!file) return;
+// URLs of ONNX files
+const embedURL = 'https://huggingface.co/HuggingFaceTB/SmolVLM-256M-Instruct/resolve/main/onnx/embed_tokens.onnx';
+const decoderURL = 'https://huggingface.co/HuggingFaceTB/SmolVLM-256M-Instruct/resolve/main/onnx/decoder_model_merged_q4f16.onnx';
 
-    document.getElementById('output').textContent = 'Loading model...';
-    const arrayBuffer = await file.arrayBuffer();
-    session = await ort.InferenceSession.create(arrayBuffer, { executionProviders: ['webgpu'] });
-    modelLoaded = true;
-    document.getElementById('output').textContent = 'Model loaded! Ready to run inference.';
-});
+async function loadModels() {
+    document.getElementById('output').textContent = 'Loading embedding model...';
+    embedSession = await ort.InferenceSession.create(embedURL, { executionProviders: ['webgpu'] });
+    document.getElementById('output').textContent = 'Loading decoder model...';
+    decoderSession = await ort.InferenceSession.create(decoderURL, { executionProviders: ['webgpu'] });
+    document.getElementById('output').textContent = 'Models loaded! Upload an image and enter prompt.';
+}
+
+loadModels();
 
 // Handle image upload preview
 document.getElementById('imageUpload').addEventListener('change', (evt) => {
@@ -79,12 +75,20 @@ function imageDataToTensor(imageData) {
     return floatData;
 }
 
-// Run model
+// Dummy tokenizer (split by space, map each word to an integer)
+// Real SmolVLM tokenizer can be implemented or replaced with a small mapping
+function simpleTokenizer(text, maxLen=16) {
+    const tokens = text.split(' ').slice(0, maxLen).map((_,i) => BigInt(i+1));
+    while (tokens.length < maxLen) tokens.push(0n); // pad
+    return new BigInt64Array(tokens);
+}
+
 document.getElementById('runBtn').addEventListener('click', async () => {
-    if (!modelLoaded) {
-        alert('Upload an ONNX model first!');
+    if (!embedSession || !decoderSession) {
+        alert('Models not loaded yet!');
         return;
     }
+
     const imgEl = document.getElementById('preview');
     if (!imgEl.src) {
         alert('Upload an image first!');
@@ -93,28 +97,36 @@ document.getElementById('runBtn').addEventListener('click', async () => {
 
     const prompt = document.getElementById('prompt').value || "extract the text from image accurately";
 
+    // Wait for image to load
     const img = new Image();
     img.src = imgEl.src;
     await new Promise(r => img.onload = r);
 
+    // Image tensor
     const imageData = resizeImage(img);
     const pixelValues = imageDataToTensor(imageData);
 
-    // Dummy input_ids for demo
-    const inputIds = new BigInt64Array([0n]); // note the 'n' at the end
+    // Tokenize prompt
+    const inputIds = simpleTokenizer(prompt, 16);
 
-    const feeds = {
+    // Get embeddings
+    const embedFeeds = { input_ids: new ort.Tensor('int64', inputIds, [1,16]) };
+    const embedResult = await embedSession.run(embedFeeds);
+    const inputsEmbeds = embedResult.output; // 'output' key from embedding model
+
+    // Feed decoder model
+    const decoderFeeds = {
         pixel_values: new ort.Tensor('float32', pixelValues, [1,3,160,160]),
-        input_ids: new ort.Tensor('int64', inputIds, [1,1])
+        inputs_embeds: inputsEmbeds
     };
 
     const t0 = performance.now();
-    const results = await session.run(feeds);
+    const decoderResult = await decoderSession.run(decoderFeeds);
     const t1 = performance.now();
 
     document.getElementById('output').textContent =
         `Inference done in ${(t1 - t0).toFixed(2)} ms\n` +
-        `Model output keys: ${Object.keys(results).join(', ')}`;
+        `Decoder output keys: ${Object.keys(decoderResult).join(', ')}`;
 });
 </script>
 
