--- a/smolvlm.html
+++ b/smolvlm.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SmolVLM WebGPU Demo</title>
+<title>SmolVLM WebGPU Safe Demo</title>
 <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
 <style>
   body { font-family: Arial; padding: 20px; background: #111; color: #eee; }
   input, button { margin: 10px 0; }
   img { max-width: 300px; display: block; margin: 10px 0; }
-  pre { background: #222; padding: 10px; }
+  pre { background: #222; padding: 10px; white-space: pre-wrap; word-wrap: break-word; }
 </style>
 </head>
 <body>
 
-<h1>SmolVLM WebGPU Demo</h1>
+<h1>SmolVLM WebGPU Safe Demo</h1>
 
 <input type="file" id="imageUpload" accept="image/*"><br>
 <input type="text" id="prompt" placeholder="Enter your prompt" value="extract the text from image accurately"><br>
@@ -26,21 +26,30 @@
 let embedSession = null;
 let decoderSession = null;
 
-// URLs of ONNX files
+// ONNX URLs
 const embedURL = 'https://huggingface.co/HuggingFaceTB/SmolVLM-256M-Instruct/resolve/main/onnx/embed_tokens.onnx';
 const decoderURL = 'https://huggingface.co/HuggingFaceTB/SmolVLM-256M-Instruct/resolve/main/onnx/decoder_model_merged_q4f16.onnx';
 
+// WebGPU-safe model loading
 async function loadModels() {
     document.getElementById('output').textContent = 'Loading embedding model...';
-    embedSession = await ort.InferenceSession.create(embedURL, { executionProviders: ['webgpu'] });
+    embedSession = await ort.InferenceSession.create(embedURL, {
+        executionProviders: ['webgpu', 'wasm'],
+        gpuOptions: { useBufferMapping: false }
+    });
+
     document.getElementById('output').textContent = 'Loading decoder model...';
-    decoderSession = await ort.InferenceSession.create(decoderURL, { executionProviders: ['webgpu'] });
-    document.getElementById('output').textContent = 'Models loaded! Upload an image and enter prompt.';
+    decoderSession = await ort.InferenceSession.create(decoderURL, {
+        executionProviders: ['webgpu', 'wasm'],
+        gpuOptions: { useBufferMapping: false }
+    });
+
+    document.getElementById('output').textContent = 'Models loaded! Upload an image and enter a prompt.';
 }
 
 loadModels();
 
-// Handle image upload preview
+// Image upload preview
 document.getElementById('imageUpload').addEventListener('change', (evt) => {
     const file = evt.target.files[0];
     if (!file) return;
@@ -75,15 +84,17 @@ function imageDataToTensor(imageData) {
     return floatData;
 }
 
-// Dummy tokenizer (split by space, map each word to an integer)
-// Real SmolVLM tokenizer can be implemented or replaced with a small mapping
-function simpleTokenizer(text, maxLen=16) {
+// Simple dummy tokenizer
+function simpleTokenizer(text, maxLen=8) { // reduced length for mobile safety
     const tokens = text.split(' ').slice(0, maxLen).map((_,i) => BigInt(i+1));
     while (tokens.length < maxLen) tokens.push(0n); // pad
     return new BigInt64Array(tokens);
 }
 
+// Run model
 document.getElementById('runBtn').addEventListener('click', async () => {
+    const outputEl = document.getElementById('output');
+
     if (!embedSession || !decoderSession) {
         alert('Models not loaded yet!');
         return;
@@ -97,24 +108,22 @@ document.getElementById('runBtn').addEventListener('click', async () => {
 
     const prompt = document.getElementById('prompt').value || "extract the text from image accurately";
 
-    // Wait for image to load
     const img = new Image();
     img.src = imgEl.src;
     await new Promise(r => img.onload = r);
 
-    // Image tensor
     const imageData = resizeImage(img);
     const pixelValues = imageDataToTensor(imageData);
 
     // Tokenize prompt
-    const inputIds = simpleTokenizer(prompt, 16);
+    const inputIds = simpleTokenizer(prompt, 8);
 
     // Get embeddings
-    const embedFeeds = { input_ids: new ort.Tensor('int64', inputIds, [1,16]) };
+    const embedFeeds = { input_ids: new ort.Tensor('int64', inputIds, [1,8]) };
     const embedResult = await embedSession.run(embedFeeds);
-    const inputsEmbeds = embedResult.output; // 'output' key from embedding model
+    const inputsEmbeds = embedResult.output || embedResult['output']; // depends on ONNX key
 
-    // Feed decoder model
+    // Decoder feeds
     const decoderFeeds = {
         pixel_values: new ort.Tensor('float32', pixelValues, [1,3,160,160]),
         inputs_embeds: inputsEmbeds
@@ -124,7 +133,7 @@ document.getElementById('runBtn').addEventListener('click', async () => {
     const decoderResult = await decoderSession.run(decoderFeeds);
     const t1 = performance.now();
 
-    document.getElementById('output').textContent =
+    outputEl.textContent =
         `Inference done in ${(t1 - t0).toFixed(2)} ms\n` +
         `Decoder output keys: ${Object.keys(decoderResult).join(', ')}`;
 });
