--- a/pen.html
+++ b/pen.html
@@ -37,8 +37,9 @@
   <div id="hint">Placement mode: drag/move/resize rectangle. Press Apply to lock into world.</div>
 
   <!-- AR.js and three.js -->
-<script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/three.js/build/three.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/three.js/build/ar-threex.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.180.0/build/three.tsl.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
+
 
   <script>
     let scene, camera, renderer;
