--- a/pen.html
+++ b/pen.html
@@ -37,7 +37,7 @@
   <div id="hint">Placement mode: drag/move/resize rectangle. Press Apply to lock into world.</div>
 
   <!-- AR.js and three.js -->
-<script type-"module" src="https://cdn.jsdelivr.net/npm/three@0.180.0/build/three.tsl.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.180.0/build/three.module.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
 
 
